# Real-time_Animal_reID

./: .gitignore  .pre-commit-config.yaml  FalseTagFinder.py  RAPID.py  README.md  pyproject.toml  requirements.txt  windows_requirements.yaml
config/: config_FalseTagFinder.yaml  config_RAPID.yaml  config_Rename.yaml
modules/: calc_similarity.py  database.py  evaluate.py  img_processing.py  inference.py  utils.py  visualize.py
modules/visualization/: visualize_FalseTagFinder.py  visualize_match.py
scripts/: install_on_linux.sh  install_on_windows.bat
src/rapid/: FalseTagFinder.py  RAPID.py
src/rapid/modules/: calc_similarity.py  database.py  evaluate.py  img_processing.py  inference.py  utils.py
src/rapid/modules/visualization/: visualize_FalseTagFinder.py  visualize_match.py
src/rapid/tools/: rename_imgs.py
